--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,77 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
-  {% include header.html %}
-  
+ 
   <main class="distill-main">
     <div class="container">
       {{ content }}
     </div>
+    <section class="people">
+  <div class="l-page">
+    <h2>Team</h2>
+    <div class="leads">
+      <h3>Leads</h3>
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Giovanna Ceserani</a>
+          <a href="" class="affiliation">Stanford University</a>
+        </div>
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Sebastian Ahnert</a>
+          <a href="" class="affiliation">Cambridge University</a>
+        </div>
+    </div>
+    <div class="contributors">
+      <h3>Contributors</h3>
+      <div class="columns">
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Nicole Coleman</a>
+          <a href="" class="affiliation">independent</a>
+        </div>
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Allen Romano</a>
+          <a href="" class="affiliation"></a>
+        </div>
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Huijun Mao</a>
+          <a href="" class="affiliation">Stanford University</a>
+        </div>f
+      </div>
+    </div>
+    <div class="consultants">
+      <h3>Consultants</h3>
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Diyi Yang</a>
+          <a href="" class="affiliation"></a>
+        </div>
+        <div class="person">
+          <a href="" class="mug">
+            <img src="">
+          </a>
+          <a href="" class="name">Michele Mauri</a>
+          <a href="" class="affiliation">Density Design</a>
+        </div>
+    </div>
+  </div>
+</section>
   </main>
 
-  {% include footer.html %}
 </body>
 </html>
