remove people section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="container">
       {{ content }}
     </div>
-    <section class="people">
+    <!-- <section class="people">
   <div class="l-page">
     <h2>Team</h2>
     <div class="leads">
@@ -82,7 +82,7 @@
         </div>
     </div>
   </div>
-</section>
+</section> -->
   </main>
 
 </body>
