--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,12 @@
         <div class="brand">
           <span class="dot" aria-hidden="true"></span><span>{{ site.title }}</span>
         </div>
-        {# Primary nav (currently not used)
-        <nav aria-label="primary">
+        
+        <!--<nav aria-label="primary">
           <a href="#outcomes">Outcomes</a>
           <a href="#about">About</a>
-        </nav>
-        #}
+        </nav>-->
+
       </div>
     </header>
 
