add nav for sub pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,7 @@
           <span class="dot" aria-hidden="true"></span><span>{{ site.title }}</span>
         </div>
         
-        <!--<nav aria-label="primary">
-          <a href="#outcomes">Outcomes</a>
-          <a href="#about">About</a>
-        </nav>-->
+        {% include nav.html %}
 
       </div>
     </header>
